--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0"
+# tracing = "0.1"
+tokio = "1.48"
 xilem = "0.4"
+sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
