--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ anyhow = "1.0"
 sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
 thiserror = "2.0"
 tokio = "1.49"
+uuid = { version = "1.20", features = ["v4"] }
 xilem = { git = "https://github.com/linebender/xilem" }
